<resources>
    <string name="app_name">GuideSlayTheSpire</string>
    <string name="admob_interstitial_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="strength_build_explain">    In the Strength build the main things you need to do is gather cards which will increase the strength of the Ironclad, in meantime increasing your strength will increase the damage output of each attack cards you have. The cards you needed such as : </string>
    <string name="strength_build_explain2">While using the Flex cards, you can negate the debuff effect which lose your 2 strength after using it. To negate that you can easily use the Panacea card, it can be negated by some relics to such as Clockwork Souvenir or Orange Pellets Relic. </string>
    <string name="strength_build_explain3">You can use any Attack cards to deal a big damage since you already buff your strength, Try using some good cards, such as Reaper, since it can give you amount of heals base on the unblockable damage you dealt to the enemies. </string>
    <string name="strength_build_relic"> Some good relics that will give advantage for this build are such as :</string>
    <string name="defend_build_explain">    In the Defend build the main things you need to do is build the deck around the Barricade cards or get the Calipers Relic, since it will stack up your block number without losing it when turns end. If you get the card/relic you will just need to collect the increase block cards, such as Entrench since it will double your block numbers.</string>
    <string name="defend_build_explain2">   Since you already build your deck with the cards needed on the top, you can easily kill the enemies by using Body Slam card. Body Slam will deal damage based on the block numbers you have. And a additional Juggernaut cards is good to for the damage</string>
    <string name="defend_build_relic"> Some good relics that will give advantage for this build are such as :</string>
    <string name="rupture_build_explain">   In the Rupture build the main things you need to is build the deck around the Rupture cards. Rupture will give +1 strength for each time you lose HP while using a card, and you need cards which will deal damage to yourself while damaging the enemies. Offering and Bloodletting are good supports card for this build since it can give you energy while decrease your HP.</string>
    <string name="rupture_build_explain2">  You can add Brutality card too, since it will give you an additional to draw a card while you lose 1 HP, it will a good synergy with the rupture build. And you need Reaper card to give to an additional HP based on the unblockable damage, Hemokinesis is a good attack card for this build too. But be careful of your HP.</string>
    <string name="rupture_build_relic"> Some good relics that will give advantage for this build are such as :</string>
    <string name="searing_build_explain">   In the Searing Blow build the main things you need to is build the deck based on the upgrading the Searing Blow. Searing Blow can be upgraded by many times, so it will give a lot of damage after each upgrade. You need to keep you cards in deck low, since you will need to draw Searing Blow for dealing a lot of damage.</string>
    <string name="searing_build_explain2">  There are some good cards, that will be good synergy with the Searing Blow build such as Armaments and Apotheosis, since it will give you an upgraded to the card, so you can increase its damages.</string>
    <string name="searing_build_explain3">  You can try to add Double Tap or Dual Wield card, it has a little of energy require and it can will be a good synergy too for the Searing Blow, extra copy of the upgraded Searing Blow won\'t be hurt right.</string>
    <string name="searing_build_relic"> Some good relics that will give advantage for this build are such as :</string>
    <string name="zero_mana_build_explain"> In the Zero Energy build the main things you need is cards which can deal damage while using 0 energy. There are some cards that are good for this build such as Anger, Clash. Anger can give you a duplicate of the card while dealing damage to the enemy.</string>
    <string name="zero_mana_build_explain2"> You can add support cards like Rage or Berserk, Rage can give you 3 block each time you use the attack card. You can use the Double Tap cards too, since it will give the same effect while using an attack card.</string>
    <string name="zero_mana_build_explain3"> If you have a lot of Energy, you can combine this build with Strength Build, since it can deal a lot of damage while using 0 energy, it can increase the damage too.</string>
    <string name="zero_mana_build_relic"> Some good relics that will give advantage for this build are such as :</string>
    <string name="poison_build_explain"> In the Poison build the main things you need to do is build up the poison damage. To use this build you need some defence card to block the enemy damage while build the poison damage, and after that you can build the deck with Catalyst and Noxious Fumes Card.</string>
    <string name="poison_build_explain2"> If you have another copy of Catalyst card it will be a good things since it can double the poison easily. There are additional supporting cards such as Nightmare which can easily copy the Catalyst or Noxious Flame cards, and The Specimen relic and Snecko Skull will be the best synergy you will get in Poison Build. This Poison build have a good synergy with Block build.</string>
    <string name="poison_build_explain3"> If you have another copy of Catalyst card it will be a good things since it can double the poison easily. There are additional supporting cards such as Nightmare which can easily copy the Catalyst or Noxious Flame cards, and The Specimen relic and Snecko Skull will be the best synergy you will get in Poison Build. This Poison build have a good synergy with Block build.</string>
    <string name="posion_build_relic"> Some good relics that will give advantage for this build are such as :</string>
    <string name="block_build_explain">  In this Block build, you will build a deck with a build up the block. So you need a good combination build while using it, since it mainly focus at the defence cards. There are many good block cards such as After Image, Dodge and Roll, Blur, Footwork, Burst. Besides that you need to have a good cycle to draw the cards.</string>
    <string name="block_build_explain2"> You can use this build with Poison Build (Catalyst and Noxious Fume), or using a lot of Kniv to deal damage since it use 0 energy. There are good combination of the relics for this build besides you need to build up your block, such as Thread and Needle, Orichalcum, Oddly Smooth Stone.</string>
    <string name="block_build_relic"> Some good relics that will give advantage for this build are such as :</string>
    <string name="shiv_build_explain"> There are many card that can be use to build Shiv Deck, the main thing is to draw a lot of shiv to your hand then deal damage to the enemy with all the shiv. You will need some cards for Shiv Build, such as Infinite Blades, Blade Dance, Cloak and Dagger, since it will add Shiv to your hand by using the cards.</string>
    <string name="shiv_build_explain2"> You can add more damage to the Shiv Cards you have added, by using some cards such as Accuracy, Finisher, and adding Wrist Blade Relics can gain your Shiv damage too.</string>
    <string name="shiv_build_relic"> Some good relics that will give advantage for this build are such as : </string>
    <string name="frost_build_explain"> In this Frost build, the main things is build up the block by using the Glacier cards, then you can deal damage using the Blizzard cards, you need a lot of focus and orb slot to keep maintain the block. Or you can use Barrage card to deal damage if you already have a lot of orb slots.</string>
    <string name="frost_build_explain2"> Frozen Core relics will give a good synergy with this build, since it can channel 1 frost if you does not have any orbs.</string>
    <string name="barrage_build_explain1"> In this Barrage build, the main things is to have as many as possible by using Capacitor card, and then try channeling the empty slot with some cards such as Chaos or Glacier, Glacier will give you block so it will be good addition for the deck.</string>
    <string name="barrage_build_explain2"> Defragment cards will be a good support cards too, it will give Defect 1 Focus. After you have set your channeled orb, you can easily deal damage by using Barrage, the more orbs you have the bigger damage will be done.</string>
    <string name="zero_energy_build_defect_explain"> In this Zero energy build, tha main things you need to do is build the deck by using many 0 energy cards. Defect has a lot of 0 energy cards, so why not use it right?</string>
    <string name="zero_energy_build_defect_explain2"> You will need some good damage card with 0 energy such as FTL, Beam Cells, and Streamline. Basically Streamline is a 2 energy card, but by using it each turn the energy needed will be decreased by 1 so it will reach 0 by using it 2 times.</string>
    <string name="gameplay_explain"> Slay the Spire is the game about building a card deck and achieve the victory by reach the heart of the Spire. Before you reach the heart of the Spire you will need to finish 3 act, each act will contain a lot of enemies, elites, rest site, events, shop, chest, and by the end of the act there will be a boss fight that you need to win. If you win then you will proceed to the next act.</string>
    <string name="gameplay_explain2"> There are 3 choices of the heroes then you can choose to climb into the heart of spire. Each hero will have a different cards that will be use upon playing the hero, and you can try many different build to achieve the victory too. There are relics too, that can be used to bring a good synergy with the deck you are build with.  </string>
    <string name="gameplay_explain3"> The cards can be upgraded by using the effect of some relic, or using the rest area. Each upgrade will make the deck become stronger, but you need to choose which will be your upgraded card, since each card have a different effect too. In the rest area you can try to restore your HP by 30% of your max HP. Rest area will always be available at the end of the act before encounter the final act boss.</string>
    <string name="gameplay_explain4"> You can buy cards, relics, potion on the shop by exchange your gold. And you can discard or remove your card on your deck by using the card removal in the shop, that will cost 75 Gold, each time you use the service the price will be increase by 25. Smiling Mask relic can decrease the price into 50 gold each time you use the service.</string>
    <string name="gameplay_explain5"> For the event there will be a (?) on the maps. Sometimes event can give you an advantage like free upgrade, some Relics, gold, or trade-off such as losing gold, curse card, lower max HP for buffing the heroes with strength or etc..</string>
    <string name="gameplay_explain6"> Each time you encounter the enemies you will get to choose 3 cards, and you will get some gold sometimes it will give you a random potion too. Elites enemies will give you an additional Relic after you kill it, but of course the Elite will be harder than the normal enemies. For the boss you will get 3 choice of rare card with 3 choice of Boss Relic, gold and random potion.</string>
    <string name="gameplay_explain7"> Ascension mode can be unlocked after you beat the final boss (Act 3) by using all of the 3 heroes. There will be 20 level of Ascension mode, and each level will give you a modifier for each run and it will get harder.</string>
</resources>