<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F0F0"
    tools:context=".Gameplay">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/mainGreen"
            android:gravity="center"
            android:text="Gameplay"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/browser_actions_bg_grey"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gameplay_explain"
                android:textAlignment="center"
                android:textColor="#000000"
                android:lineSpacingExtra="2dp"
                android:textSize="14sp"
                android:padding="10dp"
                android:background="#fff"
                android:layout_margin="10dp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                app:srcCompat="@drawable/gameplay_explain_pic"
                />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gameplay_explain2"
                android:textAlignment="center"
                android:textColor="#000000"
                android:lineSpacingExtra="2dp"
                android:textSize="14sp"
                android:padding="10dp"
                android:background="#fff"
                android:layout_margin="10dp" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                app:srcCompat="@drawable/pick_heroes_pic"
                />


            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gameplay_explain3"
                android:textAlignment="center"
                android:textColor="#000000"
                android:lineSpacingExtra="2dp"
                android:textSize="14sp"
                android:padding="10dp"
                android:background="#fff"
                android:layout_margin="10dp" />

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_height="200dp"
                app:srcCompat="@drawable/rest_pic"
                />


            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                app:srcCompat="@drawable/rest1_pic"
                />


            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gameplay_explain4"
                android:textAlignment="center"
                android:textColor="#000000"
                android:lineSpacingExtra="2dp"
                android:textSize="14sp"
                android:padding="10dp"
                android:background="#fff"
                android:layout_margin="10dp" />

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                app:srcCompat="@drawable/shop_pic"
                />

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                app:srcCompat="@drawable/shop1_pic"
                />


            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gameplay_explain5"
                android:textAlignment="center"
                android:textColor="#000000"
                android:lineSpacingExtra="2dp"
                android:textSize="14sp"
                android:padding="10dp"
                android:background="#fff"
                android:layout_margin="10dp" />

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                app:srcCompat="@drawable/event_pic"
                />


            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gameplay_explain6"
                android:textAlignment="center"
                android:textColor="#000000"
                android:lineSpacingExtra="2dp"
                android:textSize="14sp"
                android:padding="10dp"
                android:background="#fff"
                android:layout_margin="10dp" />

            <ImageView
                android:id="@+id/imageView14"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                app:srcCompat="@drawable/enemies_drop_pic"
                />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gameplay_explain7"
                android:textAlignment="center"
                android:textColor="#000000"
                android:lineSpacingExtra="2dp"
                android:textSize="14sp"
                android:padding="10dp"
                android:background="#fff"
                android:layout_margin="10dp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>