<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F0f0"
    tools:context=".Ironclad_zeromana_build">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/mainGreen"
            android:gravity="center"
            android:text="Zero Mana Build"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/browser_actions_bg_grey"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/zero_mana_build_explain"
                android:textAlignment="center"
                android:textColor="#000000"
                android:lineSpacingExtra="2dp"
                android:padding="10dp"
                android:background="#fff"
                android:layout_margin="10dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView9"
                        android:layout_width="100dp"
                        android:layout_height="110dp"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:src="@drawable/ironclad_anger"
                        android:tag="image_tag" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Anger"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>




            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/zero_mana_build_explain2"
                android:textAlignment="center"
                android:textColor="#000000"
                android:lineSpacingExtra="2dp"
                android:padding="10dp"
                android:background="#fff"
                android:layout_margin="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/Limit_image"
                        android:layout_width="100dp"
                        android:layout_height="110dp"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:src="@drawable/ironclad_berserk"
                        android:tag="image_tag" />

                    <TextView
                        android:id="@+id/Limit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Berserk"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/Spot_pic"
                        android:layout_width="100dp"
                        android:layout_height="110dp"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:src="@drawable/rage"
                        android:tag="image_tag" />

                    <TextView
                        android:id="@+id/spot_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="Rage"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView32"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/zero_mana_build_explain3"
                android:textAlignment="center"
                android:textColor="#000000"
                android:lineSpacingExtra="2dp"
                android:padding="10dp"
                android:background="#fff"
                android:layout_margin="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/an_image"
                        android:layout_width="100dp"
                        android:layout_height="110dp"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:src="@drawable/clash"
                        android:tag="image_tag" />

                    <TextView
                        android:id="@+id/a_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Clash"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/Spot1_pic"
                        android:layout_width="100dp"
                        android:layout_height="110dp"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:src="@drawable/double_tap"
                        android:tag="image_tag" />

                    <TextView
                        android:id="@+id/spot2_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Double Tap"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/block_build_relic"
                android:textAlignment="center"
                android:textColor="#000000"
                android:lineSpacingExtra="2dp"
                android:padding="10dp"
                android:background="#fff"
                android:layout_margin="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/Limit_image1"
                        android:layout_width="100dp"
                        android:layout_height="110dp"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/bgclor"
                        android:src="@drawable/relic_uncommon_moltenegg"
                        android:tag="image_tag" />

                    <TextView
                        android:id="@+id/Limit_text1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Molten Egg"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="-15dp"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/orichalcum_pic1"
                        android:layout_width="100dp"
                        android:layout_height="110dp"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/bgclor"
                        android:src="@drawable/relic_uncommon_shuriken"
                        android:tag="image_tag" />

                    <TextView
                        android:id="@+id/orichalcum_text1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="Shuriken"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>